add create new property
